--- a/notebooks/scene_mood_classification.ipynb
+++ b/notebooks/scene_mood_classification.ipynb
@@ -6,7 +6,7 @@
     "id": "IjGN1BLtriRk"
    },
    "source": [
-    "This project is to classify the mood of each scene by using Facebook's bart-large-mnli model. Due to time limitation, no extra fine tunning is conducted here."
+    "This project is to classify the mood of each scene by using Facebook's bart-large-mnli model."
    ]
   },
   {
